force-app/main/default/objects/StripeEvent__c/StripeEvent__c.object-meta.xml
<CustomObject>
    <label>Stripe Event</label>
    <nameField>
        <displayFormat>Stripe Event - {0000}</displayFormat>
        <label>Stripe Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>