force-app/main/default/objects/StripeEvent__c/fields/EndProcessingTime__c.field-meta.xml
<CustomField>
    <fullName>EndProcessingTime__c</fullName>
    <label>End Processing Time</label>
    <type>DateTime</type>
</CustomField>