force-app/main/default/objects/StripeEvent__c/fields/PrimaryResource__c.field-meta.xml
<CustomField>
    <fullName>PrimaryResource__c</fullName>
    <label>Primary Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>