force-app/main/default/objects/StripeEvent__c/fields/ResourceRecord__c.field-meta.xml
<CustomField>
    <fullName>ResourceRecord__c</fullName>
    <label>Resource Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>