force-app/main/default/objects/StripeEvent__c/fields/ResourceSync__c.field-meta.xml
<CustomField>
    <fullName>ResourceSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource Sync</label>
    <type>Checkbox</type>
</CustomField>