force-app/main/default/objects/StripeEvent__c/fields/SecondaryResource__c.field-meta.xml
<CustomField>
    <fullName>SecondaryResource__c</fullName>
    <label>Secondary Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>