force-app/main/default/objects/StripeEvent__c/fields/StartProcessingTime__c.field-meta.xml
<CustomField>
    <fullName>StartProcessingTime__c</fullName>
    <label>Start Processing Time</label>
    <type>DateTime</type>
</CustomField>